// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Colors/ColorSlider Default smoke-test 1`] = `
<div class="cmpui_color-slider__root"
     tabindex="0"
>
  <div style="position: relative; overflow: hidden; cursor: pointer; width: 192px; height: 20px;">
    <div class="alpha-checker-board"
         style="width: 192px; height: 20px;"
    >
      <div style="width: 100%; height: 100%; background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(0, 0, 0));">
      </div>
    </div>
    <div x="96"
         y="10"
         class="cmpui_circle__root alpha-checker-board"
         style="--cmpui-circle-nob-fill: white; --cmpui-circle-nob-radius: 6.666666666666667px; --cmpui-circle-nob-stroke-color: rgb(0,0,0); --cmpui-circle-nob-stroke-width: 2px; border: 2px solid rgb(0, 0, 0); left: 89.3333px; top: 3.33333px; --cmpui-block-size: 4px; pointer-events: none;"
    >
    </div>
    <div x="96"
         y="10"
         class="cmpui_circle__root cmpui_color-slider__nob"
         style="--cmpui-circle-nob-fill: rgba(127.5,127.5,127.5,0.5); --cmpui-circle-nob-radius: 6.666666666666667px; --cmpui-circle-nob-stroke-color: rgb(0,0,0); --cmpui-circle-nob-stroke-width: 2px; border: 2px solid rgb(0, 0, 0); left: 89.3333px; top: 3.33333px;"
    >
    </div>
  </div>
</div>
`;

exports[`Colors/ColorSlider HeightAndNobSize smoke-test 1`] = `
<div class="cmpui_color-slider__root"
     tabindex="0"
>
  <div style="position: relative; overflow: hidden; cursor: pointer; width: 192px; height: 32px;">
    <div class="alpha-checker-board"
         style="width: 192px; height: 32px;"
    >
      <div style="width: 100%; height: 100%; background-image: linear-gradient(to right, black, red);">
      </div>
    </div>
    <div x="96"
         y="16"
         class="cmpui_circle__root alpha-checker-board"
         style="--cmpui-circle-nob-fill: white; --cmpui-circle-nob-radius: 10.666666666666666px; --cmpui-circle-nob-stroke-color: rgb(255,255,255); --cmpui-circle-nob-stroke-width: 2px; border: 2px solid rgb(255, 255, 255); left: 85.3333px; top: 5.33333px; --cmpui-block-size: 4px; pointer-events: none;"
    >
    </div>
    <div x="96"
         y="16"
         class="cmpui_circle__root cmpui_color-slider__nob"
         style="--cmpui-circle-nob-fill: rgba(127.5,0,0,1); --cmpui-circle-nob-radius: 10.666666666666666px; --cmpui-circle-nob-stroke-color: rgb(255,255,255); --cmpui-circle-nob-stroke-width: 2px; border: 2px solid rgb(255, 255, 255); left: 85.3333px; top: 5.33333px;"
    >
    </div>
  </div>
</div>
`;

exports[`Colors/ColorSlider Hue smoke-test 1`] = `
<div class="cmpui_color-slider__root"
     tabindex="0"
>
  <div style="position: relative; overflow: hidden; cursor: pointer; width: 192px; height: 20px;">
    <div class="alpha-checker-board"
         style="width: 192px; height: 20px;"
    >
      <div style="width: 100%; height: 100%; background-image: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);">
      </div>
    </div>
    <div x="96"
         y="10"
         class="cmpui_circle__root alpha-checker-board"
         style="--cmpui-circle-nob-fill: white; --cmpui-circle-nob-radius: 6.666666666666667px; --cmpui-circle-nob-stroke-color: rgb(0,0,0); --cmpui-circle-nob-stroke-width: 2px; border: 2px solid rgb(0, 0, 0); left: 89.3333px; top: 3.33333px; --cmpui-block-size: 4px; pointer-events: none;"
    >
    </div>
    <div x="96"
         y="10"
         class="cmpui_circle__root cmpui_color-slider__nob"
         style="--cmpui-circle-nob-fill: rgba(0,255,255,1); --cmpui-circle-nob-radius: 6.666666666666667px; --cmpui-circle-nob-stroke-color: rgb(0,0,0); --cmpui-circle-nob-stroke-width: 2px; border: 2px solid rgb(0, 0, 0); left: 89.3333px; top: 3.33333px;"
    >
    </div>
  </div>
</div>
`;
